# sync-to-local-or-remote

./: .gitignore  README.md  config.json  config_example.json  config_upload_example.json  install.bat  pyproject.toml  start.bat  start_upload.bat  update.bat
src/sync_to_local/: __init__.py  cli.py  config.py  constants.py  manifest.py  pipeline.py  sync_engine.py  upload_cli.py  upload_engine.py  webdav_utils.py
src/sync_to_local/sources/: __init__.py  base.py  nextcloud.py
src/sync_to_local/targets/: __init__.py  base.py  nextcloud.py
tests/: conftest.py  test_cli.py  test_config.py  test_manifest.py  test_nextcloud.py  test_nextcloud_target.py  test_pipeline.py  test_sync_engine.py  test_upload_cli.py  test_upload_engine.py  test_webdav_utils.py
tools/: tests.bat
